--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
     "juice": "^0.4.0",
-    "grunt-juice-email": "^0.1.1"
+    "grunt-juice-email": "^0.1.1",
+    "grunt-contrib-stylus": "^0.18.0"
   }
 }
